; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/tegra/fuse/extr_tegra-apbmisc.c_tegra_read_ram_code.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/tegra/fuse/extr_tegra-apbmisc.c_tegra_read_ram_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@long_ram_code = common dso_local global i64 0, align 8
@PMC_STRAPPING_OPT_A_RAM_CODE_MASK_LONG = common dso_local global i32 0, align 4
@PMC_STRAPPING_OPT_A_RAM_CODE_MASK_SHORT = common dso_local global i32 0, align 4
@PMC_STRAPPING_OPT_A_RAM_CODE_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tegra_read_ram_code() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @tegra_read_straps()
  store i32 %2, i32* %1, align 4
  %3 = load i64, i64* @long_ram_code, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i32, i32* @PMC_STRAPPING_OPT_A_RAM_CODE_MASK_LONG, align 4
  %7 = load i32, i32* %1, align 4
  %8 = and i32 %7, %6
  store i32 %8, i32* %1, align 4
  br label %13

9:                                                ; preds = %0
  %10 = load i32, i32* @PMC_STRAPPING_OPT_A_RAM_CODE_MASK_SHORT, align 4
  %11 = load i32, i32* %1, align 4
  %12 = and i32 %11, %10
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %9, %5
  %14 = load i32, i32* %1, align 4
  %15 = load i32, i32* @PMC_STRAPPING_OPT_A_RAM_CODE_SHIFT, align 4
  %16 = ashr i32 %14, %15
  ret i32 %16
}

declare dso_local i32 @tegra_read_straps(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
